# veb-project

./: .gitignore  pyproject.toml  server.py
templates/: catalog.html  category.html  contacts.html  home.html
